<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/blue">

        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:padding="6dp"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/nunito_semibold"
            android:text="Add Task"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_outiline_edittext"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/enter_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:inputType="text"
        android:background="@drawable/bg_outiline_edittext"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/enter_description"
        android:minHeight="60dp"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/select_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_outiline_edittext"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/select_date"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/select_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/bg_outiline_edittext"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/select_time"
        android:paddingHorizontal="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/add_task"
        android:textAllCaps="false" />
</LinearLayout>